force-app/main/default/objects/Fee_Components__c/Fee_Components__c.object-meta.xml
<CustomObject>
    <label>Fee Component</label>
    <nameField>
        <label>Fee Components Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fee Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>