force-app/main/default/objects/Fee_Components__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Fee Components</relationshipLabel>
    <relationshipName>Fee_Components</relationshipName>
    <type>Lookup</type>
</CustomField>