force-app/main/default/objects/Fee_Components__c/fields/FIN_Fee_Category__c.field-meta.xml
<CustomField>
    <fullName>FIN_Fee_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fee Category</label>
    <referenceTo>FIN_Fee_Category__c</referenceTo>
    <relationshipLabel>Fee Components</relationshipLabel>
    <relationshipName>Fee_Components</relationshipName>
    <type>Lookup</type>
</CustomField>