force-app/main/default/objects/Fee_Components__c/fields/FIN_FeeComponentType__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeComponentType__c</fullName>
    <label>Fee component type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>