force-app/main/default/objects/Fee_Components__c/fields/FIN_FeeID__c.field-meta.xml
<CustomField>
    <fullName>FIN_FeeID__c</fullName>
    <externalId>true</externalId>
    <label>Fee ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>