force-app/main/default/objects/Fee_Components__c/fields/HerokuExtId__c.field-meta.xml
<CustomField>
    <fullName>HerokuExtId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>HerokuExtId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>