force-app/main/default/objects/Fee_Components__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Context__c</columns>
    <columns>FIN_Fee_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>