force-app/main/default/objects/Fee_Components__c/listViews/Unclassified_Queue.listView-meta.xml
<ListView>
    <fullName>Unclassified_Queue</fullName>
    <columns>NAME</columns>
    <columns>Context__c</columns>
    <columns>FIN_Fee_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FIN_Fee_Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unclassified Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>